--- a/ToDoList/todo_app/ToDoList/templates/unfinished_tasks.html
+++ b/ToDoList/todo_app/ToDoList/templates/unfinished_tasks.html
@@ -15,21 +15,37 @@
 </ul>
 <br>
 {% for unfinished_task in unfinished_tasks %}
-<div class="list-group" data-toggle="tooltip" data-placement="bottom" title="Note:{{unfinished_task.note}}">
-  <a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{unfinished_task.title}}</h5>
-      <small>{{unfinished_task.date_added}}</small>
-    </div>
-    <small>High piority:{{unfinished_task.high_priority}}</small>
+{% if unfinished_task.high_priority %}
+<a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-danger">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">{{unfinished_task.title}}</h5>
+    <small>{{unfinished_task.date_added}}</small>
+  </div>
+  <p class="mb-1">You need to finish this taks!</p>
+  <small>High piority:{{unfinished_task.high_priority}}</small>
 
-    <form action="{% url 'ToDoList:index' %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="id" value="{{unfinished_task.id}}">
-      <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
-    </form>
-  </a>
-</div>
+  <form action="{% url 'ToDoList:index' %}" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="id" value="{{unfinished_task.id}}">
+    <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+  </form>
+</a>
+{% else %}
+<a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-action">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">{{unfinished_task.title}}</h5>
+    <small>{{unfinished_task.date_added}}</small>
+  </div>
+  <p class="mb-1">You need to finish this taks!</p>
+  <small>High piority:{{unfinished_task.high_priority}}</small>
+
+  <form action="{% url 'ToDoList:index' %}" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="id" value="{{unfinished_task.id}}">
+    <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+  </form>
+</a>
+{% endif %}
 {% empty %}
 <h1>No tasks have been added</h1>
 <br>
