--- a/ToDoList/todo_app/ToDoList/templates/index.html
+++ b/ToDoList/todo_app/ToDoList/templates/index.html
@@ -19,20 +19,37 @@
 {% for daily_task in daily_tasks %}
 <div class="list-group" data-toggle="tooltip" data-placement="bottom" title="Note:{{daily_task.note}}">
   {% if not daily_task.finished %}
-  <a href="{% url 'ToDoList:edit_task' daily_task.id %}" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{daily_task.title}}</h5>
-      <small>{{daily_task.date_added}}</small>
-    </div>
-    <p class="mb-1">You need to finish this taks!</p>
-    <small>High piority:{{daily_task.high_priority}}</small>
-
-    <form action="{% url 'ToDoList:index' %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="id" value="{{daily_task.id}}">
-      <button name="submit" class="btn btn-primary btn-lg" value="finished">Finished</button>
-    </form>
-  </a>
+    {% if daily_task.high_priority %}
+    <a href="{% url 'ToDoList:edit_task' daily_task.id %}" class="list-group-item list-group-item-danger">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">{{daily_task.title}}</h5>
+        <small>{{daily_task.date_added}}</small>
+      </div>
+      <p class="mb-1">You need to finish this taks!</p>
+      <small>High piority:{{daily_task.high_priority}}</small>
+  
+      <form action="{% url 'ToDoList:index' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="id" value="{{daily_task.id}}">
+        <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+      </form>
+    </a>
+    {% else %}
+    <a href="{% url 'ToDoList:edit_task' daily_task.id %}" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">{{daily_task.title}}</h5>
+        <small>{{daily_task.date_added}}</small>
+      </div>
+      <p class="mb-1">You need to finish this taks!</p>
+      <small>High piority:{{daily_task.high_priority}}</small>
+  
+      <form action="{% url 'ToDoList:index' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="id" value="{{daily_task.id}}">
+        <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+      </form>
+    </a>
+    {% endif %}
   {% else %}
   <a href="{% url 'ToDoList:edit_task' daily_task.id %}" class="list-group-item list-group-item-action active">
     <div class="d-flex w-100 justify-content-between">
