Added chart.js and some fixes

--- a/ToDoList/todo_app/ToDoList/templates/base.html
+++ b/ToDoList/todo_app/ToDoList/templates/base.html
@@ -55,6 +55,7 @@
                             {% else %}
                             <a class="dropdown-item" href="{% url 'Users:login' %}">Log in</a>
                             <a class="dropdown-item" href="{% url 'Users:register' %}">Register</a>
+                            <a class="dropdown-item" href="/accounts/login">Sign up or Log in with Google</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'Users:profile' %}">Profile</a>
