--- a/ToDoList/todo_app/ToDoList/templates/finished_tasks.html
+++ b/ToDoList/todo_app/ToDoList/templates/finished_tasks.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h1>Protip:</h1>
+<a href="{{link}}">{{tips}}</a>
+<hr>
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
     <a class="nav-link" href="{% url 'ToDoList:index' %}">Daily Program</a>
@@ -37,6 +39,7 @@
 <br>
 {% empty %}
 <h1>No tasks have been added</h1>
+<a href="{% url 'ToDoList:new_task' %}">Let's add a task</a>
 <br>
 {% endfor %}
 {% endblock content %}
