--- a/ToDoList/todo_app/Users/templates/profile.html
+++ b/ToDoList/todo_app/Users/templates/profile.html
@@ -22,12 +22,12 @@
   </div>
   <div class="tab-pane" id="profile" role="tabpanel">
     {% if finished_tasks_len > 0 %}
-  
+
     <var id="x_values" hidden="true">{{x_values}}</var>
     <var id="y_values" hidden="true">{{y_values}}</var>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="{% static 'js/chart.min.js' %}"></script>
     <canvas id="myChart" width="400" height="400"></canvas>
-    <script src="{% static 'js/chart.js' %}"></script>
+    <script src="{% static 'js/chart_func.js' %}"></script>
     {% if well_done %}
     <div class="alert alert-success" role="alert" style="background-color: limegreen;">
       <h4 class="alert-heading">Well done!</h4>
