--- a/ToDoList/todo_app/ToDoList/templates/base.html
+++ b/ToDoList/todo_app/ToDoList/templates/base.html
@@ -72,27 +72,23 @@
         </nav>
     </header>
 
-    <!--Bootstrap-->
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
-    <script crossorigin="anonymous" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
-
-    <!--My style-->
-    <link href="{% static '/css/base_style.css' %}" rel="stylesheet">
     <!--Animate.css-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+    <link href="{% static 'css/animate.min.css' %}" rel="stylesheet"> 
+    <!--Bootstrap-->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
 
     <br>
     <div class="shadow p-3 mb-5 bg-white rounded" style="width: 75%; display: inline-block;">
         {% block content %}
         {% endblock content %}
     </div>
+
+    <!--My style-->
+    <link href="{% static '/css/base_style.css' %}" rel="stylesheet">
     <!--My Script-->
     <script src="{% static '/js/base_func.js' %}"></script>
 </body>
