--- a/ToDoList/todo_app/ToDoList/templates/finished_tasks.html
+++ b/ToDoList/todo_app/ToDoList/templates/finished_tasks.html
@@ -6,7 +6,7 @@
 <hr>
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'ToDoList:index' %}">Daily Program</a>
+    <a class="nav-link" href="{% url 'ToDoList:index' %}">Weekly Program</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="#">Finished tasks</a>
@@ -18,23 +18,29 @@
 <br>
 {% for finished_task in finished_tasks %}
 {% if finished_task.high_priority %}
-<a href="{% url 'ToDoList:edit_task' finished_task.id %}" class="list-group-item list-group-item-danger">
-  <div class="d-flex w-100 justify-content-between">
-    <h5 class="mb-1">{{finished_task.title}}</h5>
-    <small>{{finished_task.date_added}}</small>
-  </div>
-  <small>High piority:{{finished_task.high_priority}}</small>
+<div class="animated slideInLeft">
+  <a href="{% url 'ToDoList:edit_task' finished_task.id %}" class="list-group-item list-group-item-danger">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{finished_task.title}}</h5>
+      <small>{{finished_task.date_added}}</small>
+    </div>
+    <small>High piority:{{finished_task.high_priority}}</small>
+    </a>
+</div>
+
 
 </a>
 {% else %}
-<a href="{% url 'ToDoList:edit_task' finished_task.id %}" class="list-group-item list-group-item-action">
-  <div class="d-flex w-100 justify-content-between">
-    <h5 class="mb-1">{{finished_task.title}}</h5>
-    <small>{{finished_task.date_added}}</small>
-  </div>
-  <small>High piority:{{finished_task.high_priority}}</small>
+<div class="animated slideInLeft">
+  <a href="{% url 'ToDoList:edit_task' finished_task.id %}" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{finished_task.title}}</h5>
+      <small>{{finished_task.date_added}}</small>
+    </div>
+    <small>High piority:{{finished_task.high_priority}}</small>
+  </a>
+</div>
 
-</a>
 {% endif %}
 <br>
 {% empty %}
