--- a/ToDoList/todo_app/ToDoList/templates/unfinished_tasks.html
+++ b/ToDoList/todo_app/ToDoList/templates/unfinished_tasks.html
@@ -6,7 +6,7 @@
 <hr>
 <ul class="nav nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'ToDoList:index' %}">Daily Program</a>
+    <a class="nav-link" href="{% url 'ToDoList:index' %}">Weekly Program</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'ToDoList:finished_tasks' %}">Finished tasks</a>
@@ -18,35 +18,41 @@
 <br>
 {% for unfinished_task in unfinished_tasks %}
 {% if unfinished_task.high_priority %}
-<a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-danger">
-  <div class="d-flex w-100 justify-content-between">
-    <h5 class="mb-1">{{unfinished_task.title}}</h5>
-    <small>{{unfinished_task.date_added}}</small>
-  </div>
-  <p class="mb-1">You need to finish this taks!</p>
-  <small>High piority:{{unfinished_task.high_priority}}</small>
+<div class="animated slideInLeft">
+  <a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-danger">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{unfinished_task.title}}</h5>
+      <small>{{unfinished_task.date_added}}</small>
+    </div>
+    <p class="mb-1">You need to finish this taks!</p>
+    <small>High piority:{{unfinished_task.high_priority}}</small>
 
-  <form action="{% url 'ToDoList:index' %}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="id" value="{{unfinished_task.id}}">
-    <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
-  </form>
-</a>
+    <form action="{% url 'ToDoList:index' %}" method="POST">
+      {% csrf_token %}
+      <input type="hidden" name="id" value="{{unfinished_task.id}}">
+      <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+    </form>
+  </a>
+</div>
+
 {% else %}
-<a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-action">
-  <div class="d-flex w-100 justify-content-between">
-    <h5 class="mb-1">{{unfinished_task.title}}</h5>
-    <small>{{unfinished_task.date_added}}</small>
-  </div>
-  <p class="mb-1">You need to finish this taks!</p>
-  <small>High piority:{{unfinished_task.high_priority}}</small>
+<div class="animated slideInLeft">
+  <a href="{% url 'ToDoList:edit_task' unfinished_task.id %}" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{unfinished_task.title}}</h5>
+      <small>{{unfinished_task.date_added}}</small>
+    </div>
+    <p class="mb-1">You need to finish this taks!</p>
+    <small>High piority:{{unfinished_task.high_priority}}</small>
 
-  <form action="{% url 'ToDoList:index' %}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="id" value="{{unfinished_task.id}}">
-    <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
-  </form>
-</a>
+    <form action="{% url 'ToDoList:index' %}" method="POST">
+      {% csrf_token %}
+      <input type="hidden" name="id" value="{{unfinished_task.id}}">
+      <button name="submit" class="btn btn-primary btn-lg" value="finished">Finish</button>
+    </form>
+  </a>
+</div>
+
 {% endif %}
 {% empty %}
 <h1>No tasks have been added</h1>
