--- a/ToDoList/todo_app/ToDoList/templates/base.html
+++ b/ToDoList/todo_app/ToDoList/templates/base.html
@@ -34,10 +34,10 @@
                             Tasks & Programs
                         </a>
                         <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                            <a class="dropdown-item" href="{% url 'ToDoList:unfinished_tasks' %}">Unfinished tasks</a>
-                            <a class="dropdown-item" href="{% url 'ToDoList:finished_tasks' %}">Finished tasks</a>
+                            <a class="dropdown-item" href="{% url 'ToDoList:new_weekly_task' %}">New weekly task</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'ToDoList:new_task' %}">New task</a>                        </div>
+                            <a class="dropdown-item" href="{% url 'ToDoList:new_task' %}">New task</a>                        
+                        </div>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -61,6 +61,18 @@
                             <a class="dropdown-item" href="{% url 'Users:profile' %}">Profile</a>
                         </div>
                     </li>
+
+                    <li class="nav-item dropdown">
+                        <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
+                            data-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+                            About
+                        </a>
+                        <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+                            <a class="dropdown-item" href="https://github.com/PROuserR/My-website/tree/ToDoList">Source code</a>
+                        </div>
+                    </li>
+
+
                 </ul>
                 <form action="{% url 'ToDoList:search_results' %}" class="form-inline my-2 my-lg-0" method="POST">
                     {% csrf_token %}
